--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2021"
 
 [dependencies]
 rand = "0.9.0"
+tokio = { version = "1", features = ["full"] }
+mini-redis = "0.4"
+
 
 [profile.dev]
-opt-level = 0
+opt-level = 1
 overflow-checks = false
 
 [profile.release]
